--- a/Spring Fundamentals Exam Prep - 12 February 2021/shoppingList/src/main/resources/templates/product-add.html
+++ b/Spring Fundamentals Exam Prep - 12 February 2021/shoppingList/src/main/resources/templates/product-add.html
@@ -1,35 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Shopping list App</title>
-    <link rel="stylesheet" href="/css/reset-css.css"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/fragmet::head"></head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-nav rounded">
-        <a class="nav-link text-white active h5" href="/">Shopping List App</a>
-        <a class="nav-link text-white active h5" href="/">Add Product</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-        </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-                <ul class="navbar-nav row">
-                    <li class="nav-item col-md-4">
-                        <a class="nav-link text-white active h5" href="/">Logout</a>
-                    </li>
-                </ul>
-            </div>
-	</nav>
+    <nav th:replace="fragments/fragmet::navigation" class="navbar navbar-expand-lg bg-nav rounded"></nav>
 </header>
 <main>
     <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Add product</span></h1>
     <hr class="hr-3 w-25 bg-white"/>
-    <form class="mx-auto w-25 bg-blur rounded" method="" action="/">
+    <form class="mx-auto w-25 bg-blur rounded" method="POST" action="/products/add">
         <div class="form-group">
             <div class="label-holder textCol d-flex justify-content-center">
                 <label for="name" class="h4 mb-2 text-white">Name</label>
@@ -64,10 +43,11 @@
             </div>
             <select class="browser-default custom-select" id="category" name="category">
                 <option value="">Select category</option>
-				<option value="FOOD">Food</option>
-                <option value="DRINK">Drink</option>
-                <option value="HOUSEHOLD">Household</option>
-                <option value="OTHER">Other</option>  				
+				<option th:each="c:${T(com.exam.shoppingList.models.entity.enums.CategoryName).values()}"
+                        th:text="${c}" value="${c}">Food</option>
+<!--                <option value="DRINK">Drink</option>-->
+<!--                <option value="HOUSEHOLD">Household</option>-->
+<!--                <option value="OTHER">Other</option>  				-->
             </select>
             <small class="text-danger">Category error message</small>
         </div>
@@ -77,13 +57,6 @@
         </div>
     </form>
 </main>
-
-<footer class="footer bg-transparent  py-2">
-    <div class="container-fluid text-center">
-		<div class="footer-background h5 text-white">
-           &copy; Spring team 2020. All rights reserved.
-		</div>
-	</div>
-</footer>
+<footer th:replace="fragments/fragmet::footer" class="footer bg-transparent  py-2"></footer>
 </body>
 </html>
