--- a/battle-ships/src/main/resources/templates/index.html
+++ b/battle-ships/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <footer class="container mt-0 text-white">
-        <p>&copy;SoftUni Spring Team 2021. All rights reserved.</p>
+        <p>&copy;Bobby Spring Team 2023. All rights reserved.</p>
     </footer>
 </main>
 </body>
