--- a/battle-ships/src/main/resources/templates/register.html
+++ b/battle-ships/src/main/resources/templates/register.html
@@ -26,15 +26,20 @@
 
             <div class="col-md-6">
                 <div class="container bg-blur rounded p-5 mt-5 w-75">
-                    <form action="/users/register" method="POST"
+
+                    <form th:action="@{/auth/register}" th:method="POST" th:object="${userRegisterDTO}"
                           class=" text-center text-light">
+
                         <div class="form-group row">
                             <label for="username" class="col-sm-2 col-form-label">Username</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control"
                                        id="username"
+                                       name="username"
+                                       th:value="*{username}"
                                        aria-describedby="usernameHelpInline" placeholder="Username">
-                                <small id="usernameHelpInline"
+                                <small th:if="${#fields.hasErrors('username')}"
+                                       id="usernameHelpInline"
                                        class="bg-danger text-light rounded">
                                     Username length must be between 5 and 20 characters.
                                 </small>
@@ -45,8 +50,11 @@
                             <div class="col-sm-10">
                                 <input type="text" class="form-control"
                                        id="fullName"
+                                       name="fullName"
+                                       th:value="*{fullName}"
                                        aria-describedby="fullNameHelpInline" placeholder="Full name">
-                                <small id="fullNameHelpInline"
+                                <small th:if="${#fields.hasErrors('fullName')}"
+                                       id="fullNameHelpInline"
                                        class="bg-danger text-light rounded">
                                     Enter valid full name.
                                 </small>
@@ -55,9 +63,13 @@
                         <div class="form-group row">
                             <label for="email" class="col-sm-2 col-form-label">Email</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="email"
+                                <input type="text" class="form-control"
+                                       id="email"
+                                       name="email"
+                                       th:value="*{email}"
                                        aria-describedby="emailHelpInline" placeholder="email@example.com">
-                                <small id="emailHelpInline"
+                                <small th:if="${#fields.hasErrors('email')}"
+                                       id="emailHelpInline"
                                        class="bg-danger text-light rounded">
                                     Enter valid email address.
                                 </small>
@@ -68,8 +80,11 @@
                             <div class="col-sm-10">
                                 <input type="password" class="form-control"
                                        id="password"
+                                       name="password"
+                                       th:value="*{password}"
                                        aria-describedby="passwordHelpInline" placeholder="Password">
-                                <small id="passwordHelpInline"
+                                <small th:if="${#fields.hasErrors('password')}"
+                                       id="passwordHelpInline"
                                        class="bg-danger text-light rounded">
                                     Password length must be more than 3 characters long.
                                 </small>
@@ -78,10 +93,12 @@
                         <div class="form-group row">
                             <label for="confirmPassword" class="col-sm-2 col-form-label">Confirm Password</label>
                             <div class="col-sm-10">
-                                <input type="password"
-                                       class="form-control" id="confirmPassword"
+                                <input type="password" class="form-control"
+                                       id="confirmPassword"
+                                       name="confirmPassword"
+                                       th:value="*{confirmPassword}"
                                        aria-describedby="confirmPasswordHelpInline" placeholder="Confirm Password">
-                                <small
+                                <small th:if="${#fields.hasErrors('confirmPassword')}"
                                        id="confirmPasswordHelpInline" class="bg-danger text-light rounded">
                                     Password length must be more than 3 characters long.
                                 </small>
@@ -89,6 +106,7 @@
                         </div>
                         <button type="submit" class="btn btn-warning w-50">Register</button>
                     </form>
+
                 </div>
             </div>
         </div>
