--- a/battle-ships/src/main/resources/templates/login.html
+++ b/battle-ships/src/main/resources/templates/login.html
@@ -22,24 +22,31 @@
             <div class="col-md-6">
                 <div class="container bg-blur rounded p-5 mt-5 w-75 ">
 
-                    <form action="/static" method=""
+                    <form th:action="@{/auth/login}" th:method="POST" th:object="${userLoginDTO}"
                           class="text-center text-light">
-                        <h3 class="mt-5 text-center">
+
+                        <h3 th:if="${#fields.hasErrors('*')}"
+                                class="mt-5 text-center">
                             <strong class="rounded  pl-3 text-danger">Enter valid
                                 username and
                                 password</strong>
                         </h3>
+
                         <div class="form-group row">
                             <label for="username" class="col-sm-2 col-form-label">Username</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control"
                                        id="username"
+                                       name="username"
+                                       th:value="*{username}"
                                        aria-describedby="usernameHelpInline" placeholder="Username">
-                                <small
+
+                                <small th:if="${#fields.hasErrors('username')}"
                                        id="usernameHelpInline"
                                        class="bg-danger text-light rounded">
                                     Username length must be between 3 and 10 characters.
                                 </small>
+
                             </div>
                         </div>
                         <div class="form-group row">
@@ -48,12 +55,16 @@
                                 <input type="password"
                                        class="form-control"
                                        id="password"
+                                       name="password"
+                                       th:value="*{password}"
                                        aria-describedby="passwordHelpInline" placeholder="Password">
-                                <small
+
+                                <small th:if="${#fields.hasErrors('password')}"
                                        id="passwordHelpInline"
                                        class="bg-danger text-light rounded">
                                     Password length must be more than 3 characters.
                                 </small>
+
                             </div>
                         </div>
                         <button type="submit" class="btn btn-danger w-50">Login</button>
