--- a/battle-ships/src/main/resources/templates/fragments/navbar.html
+++ b/battle-ships/src/main/resources/templates/fragments/navbar.html
@@ -19,7 +19,7 @@
                 <a class="nav-link" th:href="@{/home}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/Ships/add}">Add Ship</a>
+                <a class="nav-link" th:href="@{/ships/add}">Add Ship</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/auth/logout}">Logout</a>
