--- a/battle-ships/src/main/resources/templates/home.html
+++ b/battle-ships/src/main/resources/templates/home.html
@@ -15,7 +15,9 @@
 <main role="main">
     <div class="jumbotron">
         <h1 class="text-center p-5 text-white font-weight-bold">Battle</h1>
-        <form action="/static" method="" class="row mb-2">
+
+        <form th:action="@{/battle}" th:method="POST" th:object="${BattleShipsDTO}"
+              class="row mb-2">
             <div class="col-md-6">
                 <div class="card flex-md-row bg-blur mb-4 box-shadow h-md-250">
                     <div class="card-body d-flex flex-column align-items-start">
@@ -24,11 +26,12 @@
                             Select the attacker
                         </h3>
                         <div class="mb-1 text-white">Select one of the ships that are owned by the current user</div>
-                        <select class="form-select mt-5" aria-label="Default select example">
+                        <select class="form-select mt-5" aria-label="Default select example" name="loggedUserShip">
                             <option selected>Select one of the ships that are owned by the current user</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option th:each="ship : ${loggedUserWithShips.shipDTOS}"
+                                    th:value="${ship.id}"
+                                    th:text="${ship.name}">
+                            </option>
                         </select>
                     </div>
                     <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb"
@@ -45,11 +48,13 @@
                             Select the defender
                         </h3>
                         <div class="mb-1 text-white">Select one of the ships that are owned by other users</div>
-                        <select class="form-select mt-5" aria-label="Default select example">
+                        <select class="form-select mt-5" aria-label="Default select example" name="notLoggedUserShip">
                             <option selected>Select one of the ships that are owned by other users</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option th:each="ship : ${notLoggedUserWithShips.shipDTOS}"
+                                    th:value="${ship.id}"
+                                    th:text="${ship.name}">
+                            </option>
+
                         </select>
                     </div>
                     <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb"
@@ -60,14 +65,15 @@
             </div>
             <button type="submit" class="col-md-6 mx-auto btn btn-danger btn-lg btn-block mt-5 mb-5">FIRE !!!</button>
         </form>
+
         <div>
             <div class="col-md-6 mx-auto bg-blur rounded text-white">
                 <div class="card-body d-flex flex-column">
                     <h4 class="d-inline-block mb-2 text-primary align-self-center">The All Ships And Their Status</h4>
                     <div class="text-center">
                         <h5>Name -- Health -- Power </h5>
-                        <ul>
-                            <li class="font-weight-bold">| Name    | Health    | Power    |</li>
+                        <ul th:each="ship : ${allShips}">
+                            <li class="font-weight-bold" th:text="${ship.toString()}">| Name    | Health    | Power    |</li>
                         </ul>
                     </div>
                 </div>
